--- a/hsQuiz/www/css/style.css
+++ b/hsQuiz/www/css/style.css
@@ -1,8 +1,8 @@
 
 .none-decoration,
 .none-decoration a{
-	text-decoration: none;
-	color: #333;
+    text-decoration: none;
+    color: #333;
 }
 
 .none-decoration .row,
@@ -11,11 +11,11 @@
 }
 
 .block{
-	display: block;
+    display: block;
 }
 
 .none{
-	display: none;
+    display: none;
 }
 
 .col-right{
@@ -38,26 +38,26 @@
 /* General
 ==================================*/
 h1 {
-	color: #fff;
-	text-shadow: 0 1px 0px #000;
-	font-size: 42px;
+    color: #fff;
+    text-shadow: 0 1px 0px #000;
+    font-size: 42px;
 }
 
 
 /* Utilities
 ==================================*/
 .title-bordered {
-	border-top: solid 2px #bbb;
-	padding-top: 30px;
+    border-top: solid 2px #bbb;
+    padding-top: 30px;
 }
 
 p {
-	color: #555;
-	margin: 0 0 25px;
+    color: #555;
+    margin: 0 0 25px;
 }
 
 .scroll {
-	height: 100%;
+    height: 100%;
 }
 
 .card{
@@ -69,7 +69,7 @@ p{
 }
 
 .bar-header{
-	padding: 0;
+    padding: 0;
 }
 
 /* General
@@ -98,12 +98,30 @@ p {
 }
 
 .classic-card{
-	padding: 20px !important;
+    height: 28vh !important;
+    padding: 20px !important;
+    -webkit-perspective: 500;
 }
 
 .classic-card img,
 .classic-card figure{
-	box-shadow: 0px 0px 20px #387ef5 !important;
-	margin: 0 auto;
-	width: 15vh;
+    position: absolute;
+    margin: 0 auto;
+    width: 15vh;
+    height: 80%; 
+    -webkit-transition: -webkit-transform 1s;
+    -webkit-backface-visibility: hidden;
+}
+
+.classic-card img#front{
+    box-shadow: 0 0 0 !important;
+}
+
+.classic-card img#back{
+    box-shadow: 0px 0px 20px #387ef5 !important;
+}
+
+.classic-card img#back:hover,
+.classic-card img#front:hover {
+  -webkit-transform: rotateY(-180deg);
 }
