--- a/hsQuiz/www/templates/question.html
+++ b/hsQuiz/www/templates/question.html
@@ -3,7 +3,12 @@
         <div class="list">
             <div class="card" style="transition-delay: 0.13s;">
                 <div class="classic-card item item-divider">
-                    <img src="img/classic.jpeg" />
+                    <div class="front">                    
+                        <img id="back" src="img/classic.jpeg" />
+                    </div>
+                    <div class="back">                      
+                        <img id="front" src="img/front.png" />
+                    </div>
                 </div>
                 <div class="item item-divider">                    
                     TESTE
